--- a/bible.html
+++ b/bible.html
@@ -3,7 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Біблія (українська)</title>
-<link rel="stylesheet" href="bible.css">
+<style>
+body { font-family: sans-serif; margin: 20px; background: #f8f8f8; }
+select, input { font-size: 1rem; margin: 5px 0; padding: 5px; }
+.verse { margin: 3px 0; padding: 3px; }
+.verse span { color: #555; font-weight: bold; margin-right: 5px; }
+#results { margin-top: 15px; }
+.search-result { border-bottom: 1px solid #ccc; padding: 5px 0; }
+
+</style>
 </head>
 <body>
 
